--- a/style.css
+++ b/style.css
@@ -1,10 +1,61 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 :root {
     --white-color:#fff;
+    --background-dark:#222;
+    --background-light:#333;
+    --font-color:#0488f5;
+}
+
+section {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    background: var(--background-dark);
+
+}
+
+section .textBox {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--background-light);
+    /*Using https://bennettfeely.com/clippy/ for creating figures*/
+    clip-path: polygon(0 0, 39% 0, 40% 100%, 0% 100%);
+}
+
+.skew1 h2, .textBox .skew2 h2 {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    font-size: 12em;
+    line-height: 1em;
+    color: var(--font-color);
+    cursor:  ;
+}
+
+.skew1 h2 {
+    opacity: 0.75;
+}
+
+.skew1 {
+    position: relative;
+    top: 50px;
+    transform: skewY(20deg);
+}
+
+.skew2 {
+    position: relative;
+    top: -50px;
+    transform: skewY(340deg);
 }
